[A]support ImageLayer